# pyzkolari

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
.template/: CHANGELOG.md  CONTRIBUTING.md  README.md
src/pyzkolari/: LogManager.py
